test/attr/ApplicationMain/attr_main_generic.code
// RUN: %target-language-frontend -typecheck -parse-as-library -verify %s

@main // expected-error{{generic 'main' types are not supported}}
class MyBase<T> {
  static fn main() {
  }
}
